--- a/lifecycle/src/main/AndroidManifest.xml
+++ b/lifecycle/src/main/AndroidManifest.xml
@@ -14,6 +14,15 @@
         android:theme="@style/Theme.JetpackSampleDemo"
         tools:targetApi="31">
         <activity
+            android:name=".way1.Advertising1Activity"
+            android:exported="false" />
+        <activity
+            android:name=".way2.AdvertisingActivity2"
+            android:exported="false" />
+        <activity
+            android:name=".way3.AdvertisingActivity3"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
