--- a/viewmodel/src/main/AndroidManifest.xml
+++ b/viewmodel/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JetpackSampleDemo">
         <activity
+            android:name=".AdvActivity2"
+            android:exported="false" />
+        <activity
+            android:name=".AdvActivity1"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
