--- a/viewbinding/build.gradle
+++ b/viewbinding/build.gradle
@@ -29,6 +29,13 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    //开启viewBinding
+    buildFeatures{
+        viewBinding=true
+    }
+
+
 }
 
 dependencies {
