--- a/databinding/src/main/AndroidManifest.xml
+++ b/databinding/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yang.databinding">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +11,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.JetpackSampleDemo">
+        <activity
+            android:name=".doublebind.Test5Activity"
+            android:exported="false" />
+        <activity
+            android:name=".bindadapter.Test4Activity"
+            android:exported="false" />
+        <activity
+            android:name=".layout.Test3Activity"
+            android:exported="false" />
+        <activity
+            android:name=".click.Test2Activity"
+            android:exported="false" />
+        <activity
+            android:name=".common.Test1Activity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
