--- a/settings.gradle
+++ b/settings.gradle
@@ -6,7 +6,8 @@ pluginManagement {
     }
 }
 dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+//    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)
     repositories {
         google()
         mavenCentral()
@@ -25,3 +26,4 @@ include ':hilt'
 include ':coroutieflow'
 include ':paging'
 include ':compose'
+include ':test'
